--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Nim in Action - Chapter 8</title>
+    <title>Canvas Test</title>
     <script
       type="text/javascript"
       src="src/nim_canvas_gamepkg/canvas_test.js"
