--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Canvas Test</title>
-    <script
-      type="text/javascript"
-      src="src/nim_canvas_gamepkg/canvas_test.js"
-    ></script>
-    <style type="text/css">
-      canvas {
-        border: 1px solid black;
-      }
-    </style>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
   </head>
-  <body onload="onLoad();" style="margin: 0; overflow: hidden">
+  <body>
     <canvas id="canvas"></canvas>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
